k8s/template/abtest/b-deploy-svc.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: podinfo-b
  labels:
    app: podinfo-b
spec:
  replicas: 2
  selector:
    matchLabels:
      app: podinfo-b
  template:
    metadata:
      labels:
        app: podinfo-b
    spec:
      containers:
      - image: registry-vpc.cn-beijing.aliyuncs.com/acs/rollouts-demo:blue
        imagePullPolicy: IfNotPresent
        name: podinfo-b
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources:
          requests:
            cpu: 250m
            ephemeral-storage: 2Gi
            memory: 512Mi

---

apiVersion: v1
kind: Service
metadata:
  name: podinfo-b
  labels:
    app: podinfo-b
spec:
  ports:
    - port: 80
      name: http
      protocol: TCP
      targetPort: 8080
  selector:
    app: podinfo-b
  type: ClusterIP
